changes for encrpted file to stream and play

--- a/WEB/src/app/home/content-mgmnt/content-subject/content-chapter/content-chapter.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-chapter/content-chapter.component.html
@@ -1,5 +1,22 @@
-<div class="container-fluid padd-15">
+<div class="book-tables wh-bg history">
+  <h4 class="media-heading">Chapter List For Subject {{subjectDetail.displayName}}</h4>
   <div class="media-body">
+    <div class="order-history">
+      <div class="history-head">
+        <span>{{classSetupDetail.displayName}}>>{{subjectDetail.displayName}}</span>
+        <div class="pull-right right-btn">
+          <a class="action-link" (click)="addChapterDetails()">
+            <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+            <span class="txt">Add Chapter</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container-fluid padd-15">
+    <!--div class="media-body">
     <div class="order-history">
       <div class="history-head">
         <span>{{subjectDetail.displayName}}</span>
@@ -11,30 +28,33 @@
         </div>
       </div>
     </div>
-  </div>
+  </div-->
 
-  <div class="book-tables wh-bg history">
-    <h4 class="media-heading">
-      <strong>Details About Chapter</strong>
-    </h4>
-    <div class="media">
-      <div class="pull-right right-btn">
+    <div class="book-tables wh-bg history">
+      <h4 class="media-heading">
+        <strong>Chapter List</strong>
+      </h4>
+      <div class="media">
+        <!--div class="pull-right right-btn">
         <a class="action-link" (click)="addChapterDetails()">
           <span class="glyphicon glyphicon-plus-sign green-icon"></span>
           <span class="txt">Add Chapter</span>
         </a>
-      </div>
-      <div class="media-body">
-        <div class="order-history" *ngFor="let chapter of chapterList">
-          <div class="history-head">
-            <span>{{chapter.displayName}}</span>
-            <span><a (click)="markFavorites(chapter)" *ngIf="chapter.type=='NOT_FAVORTIE'" class="pull-right" color="accent"><i class="material-icons">favorite_border</i></a></span>
-            <span><a (click)="removeFavorites(chapter)"  *ngIf="chapter.type=='FAVORTIE'" class="pull-right" color="accent"><i class="material-icons">favorite</i></a></span>
-            <div class="pull-right hostOrderLink">
-              <a (click)="userWorkSpace(chapter)">WorkSpace</a>
-            </div>
-          </div>
-          <div class="history-body">
+      </div-->
+        <div class="media-body">
+          <div class="row">
+            <div class="order-history  col-md-6" *ngFor="let chapter of chapterList">
+              <div class="history-head">
+                <span>{{chapter.displayName}}</span>
+                <span><a (click)="markFavorites(chapter)" *ngIf="chapter.type=='NOT_FAVORTIE'" class="pull-right" color="accent"><i
+                      class="material-icons">favorite_border</i></a></span>
+                <span><a (click)="removeFavorites(chapter)" *ngIf="chapter.type=='FAVORTIE'" class="pull-right" color="accent"><i
+                      class="material-icons">favorite</i></a></span>
+                <div class="pull-right hostOrderLink">
+                  <a (click)="userWorkSpace(chapter)">WorkSpace</a>
+                </div>
+              </div>
+              <!--div class="history-body">
             <div class="media-left">
               <img class="person-card-avatar bigPicture" src="{{chapter.icon?chapter.icon:'assets/images/class.jpg'}}">
               <a id="photoSelector" mat-icon-button (click)='onChangeImage(chapter)'>
@@ -44,25 +64,26 @@
             <div class="media-left">
               <span>{{chapter.description}}</span>
             </div>
-          </div>
-          <div class="history-foot">
-            <div class="pull-right">
-              <a class="action-link" (click)="viewTopicist(chapter)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">Topics</span>
-              </a>
-              <a class="action-link" (click)="editChapterDetail(chapter)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">EDIT</span>
-              </a>
-              <a class="action-link" (click)="deleteChapterDetail(chapter)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">DELETE</span>
-              </a>
+          </div-->
+              <div class="history-foot">
+                <div class="pull-right">
+                  <a class="action-link" (click)="viewTopicist(chapter)">
+                    <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                    <span class="txt">Topics</span>
+                  </a>
+                  <a class="action-link" (click)="editChapterDetail(chapter)">
+                    <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                    <span class="txt">EDIT</span>
+                  </a>
+                  <a class="action-link" (click)="deleteChapterDetail(chapter)">
+                    <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                    <span class="txt">DELETE</span>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
