--- a/LICENSE_BUILDER/WEB/src/app/public/license/license.html
+++ b/LICENSE_BUILDER/WEB/src/app/public/license/license.html
@@ -12,12 +12,11 @@
     <mat-card-header>
         <mat-card-title> License List</mat-card-title>
     </mat-card-header>
-    <mat-form-field  class="example-full-width">
+    <mat-form-field class="example-full-width">
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="activationDate" matSortDisableClear
-            matSortDirection="desc">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="activationDate" matSortDisableClear matSortDirection="desc">
 
             <!-- Position Column -->
             <ng-container matColumnDef="hostName">
@@ -36,7 +35,11 @@
                 <th mat-header-cell *matHeaderCellDef> Validity Days </th>
                 <td mat-cell *matCellDef="let element"> {{element.validityDay}} </td>
             </ng-container>
-
+            <!-- Weight Column -->
+            <ng-container matColumnDef="download">
+                <th mat-header-cell *matHeaderCellDef> Download </th>
+                <td mat-cell *matCellDef="let element"> <mat-icon (click)="downloadLicenseFile(element)"><i class="material-icons">cloud_download</i></mat-icon></td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
