changes for teacher and login register

--- a/LICENSE_BUILDER/WEB/src/app/public/license/license.scss
+++ b/LICENSE_BUILDER/WEB/src/app/public/license/license.scss
@@ -18,3 +18,11 @@
     max-width: 500px;
     width: 100%;
   }
+  .body-content{
+    margin-left:30px;
+    margin-right:30px;
+    margin-top:20px;
+  }
+  .btn{
+    margin-left:20px;
+  }
