--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -15,4 +15,6 @@
       <button mat-raised-button (click)="login()" color="primary">Login</button>
     </mat-card-actions>
   </form>
+
+  <button mat-raised-button (click)="registerUser()" color="primary">Register User</button> 
 </mat-card>
