--- a/LICENSE_BUILDER/WEB/src/app/public/license/license.html
+++ b/LICENSE_BUILDER/WEB/src/app/public/license/license.html
@@ -1,50 +1,73 @@
-<div class="navbar navbar-default navbar-fixed-top">
-    <div class="navbar-header">
-        <a target="_blank" class="navbar-brand">Company Name</a>
+<header class="container-fluid top-header d-flex align-items-center">
+    <div class="w-100">
+        <div class="row clearfix">
+            <div class="col-lg-12">
+                <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
+                <div class="search">
+                    <i class="fas fa-search"></i> <input type="text" placeholder="Search..." />
+                </div>
+                <ul class="login-info">
+                    <li>Last login {{ today | date }}</li>
+                    <li><a class="user" href="#"><i class="material-icons">account_circle</i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="body-content">
+    <div class="content-area">
+        <div class="primary-action mb-3">
+            <div class="row clearfix">
+                <div class="col-md-5 col-lg-6 text-right pull-right">
+                    <button type="button" class="btn btn-warning" mat-raised-button (click)="registerNewLicense()">
+                        Register License</button>
+                    <button type="button" class="btn btn-warning" mat-raised-button (click)="decativateLicense()">Deactivate
+                        License</button>
+                </div>
+            </div>
+        </div>
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title> License List</mat-card-title>
+            </mat-card-header>
+            <mat-form-field class="example-full-width">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="activationDate" matSortDisableClear
+                    matSortDirection="desc">
+
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="hostName">
+                        <th mat-header-cell *matHeaderCellDef> Host Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.hostName}} </td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="activationDate">
+                        <th mat-header-cell *matHeaderCellDef> Activated </th>
+                        <td mat-cell *matCellDef="let element"> {{element.activationDate | date:'fullDate'}} </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="validityDay">
+                        <th mat-header-cell *matHeaderCellDef> Validity Days </th>
+                        <td mat-cell *matCellDef="let element"> {{element.validityDay}} </td>
+                    </ng-container>
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="download">
+                        <th mat-header-cell *matHeaderCellDef> Download </th>
+                        <td mat-cell *matCellDef="let element">
+                            <mat-icon (click)="downloadLicenseFile(element)"><i class="material-icons">cloud_download</i></mat-icon>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </div>
+        </mat-card>
     </div>
 </div>
-<mat-card>
-    <button mat-raised-button (click)="registerNewLicense()"> Register New License</button>
-    <button mat-raised-button (click)="renewNewLicense()"> Renew License </button>
-    <button mat-raised-button (click)="decativateLicense()"> Deactivate License </button>
-</mat-card>
-<mat-card>
-    <mat-card-header>
-        <mat-card-title> License List</mat-card-title>
-    </mat-card-header>
-    <mat-form-field class="example-full-width">
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-    </mat-form-field>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="activationDate" matSortDisableClear matSortDirection="desc">
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="hostName">
-                <th mat-header-cell *matHeaderCellDef> Host Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.hostName}} </td>
-            </ng-container>
-
-            <!-- Name Column -->
-            <ng-container matColumnDef="activationDate">
-                <th mat-header-cell *matHeaderCellDef> Activated </th>
-                <td mat-cell *matCellDef="let element"> {{element.activationDate | date:'fullDate'}} </td>
-            </ng-container>
-
-            <!-- Weight Column -->
-            <ng-container matColumnDef="validityDay">
-                <th mat-header-cell *matHeaderCellDef> Validity Days </th>
-                <td mat-cell *matCellDef="let element"> {{element.validityDay}} </td>
-            </ng-container>
-            <!-- Weight Column -->
-            <ng-container matColumnDef="download">
-                <th mat-header-cell *matHeaderCellDef> Download </th>
-                <td mat-cell *matCellDef="let element"> <mat-icon (click)="downloadLicenseFile(element)"><i class="material-icons">cloud_download</i></mat-icon></td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </div>
-</mat-card>
