--- a/LICENSE_BUILDER/WEB/src/app/public/register/register.component.html
+++ b/LICENSE_BUILDER/WEB/src/app/public/register/register.component.html
@@ -1,6 +1,21 @@
-<mat-toolbar>Register Product</mat-toolbar>
-
+<header class="container-fluid top-header d-flex align-items-center">
+    <div class="w-100">
+        <div class="row clearfix">
+            <div class="col-lg-12">
+                <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
+                <div class="search">
+                    <i class="fas fa-search"></i> <input type="text" placeholder="Search..." />
+                </div>
+                <ul class="login-info">
+                    <li>Last login {{ today | date }}</li>
+                    <li><a class="user" href="#"><i class="material-icons">account_circle</i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
 <div class="row">
+    <mat-toolbar>Setup new License</mat-toolbar>
     <div class="col-md-6">
         <mat-card class="example-card">
             <mat-card-header>
@@ -8,34 +23,44 @@
             </mat-card-header>
             <mat-card-content>
                 <form class="example-form">
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>Host Name</mat-label>
-                        <input matInput placeholder="HostName" [(ngModel)]="licenseDetail.hostName" name="hostName"
-                            required>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>School Name</mat-label>
-                        <input matInput placeholder="School Name" [(ngModel)]="licenseDetail.entityName" name="entityName"
-                            required>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <input matInput [matDatepicker]="activation" placeholder="Choose a date" [(ngModel)]="licenseDetail.activationDate" name="activation">
-                        <mat-datepicker-toggle matSuffix [for]="activation"></mat-datepicker-toggle>
-                        <mat-datepicker #activation></mat-datepicker>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>License Validity in Days</mat-label>
-                        <input matInput placeholder="License Validity in Days" [(ngModel)]="licenseDetail.validityDay"
-                            name="validityDay" required>
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>Product Name</mat-label>
-                        <input matInput placeholder="Product Name" [(ngModel)]="licenseDetail.productName" name="productName"
-                            required>
-                    </mat-form-field>
-
+                    <div class="row">
+                        <div class="col-md-6">
+                            <mat-form-field appearance="outline" class="example-full-width">
+                                <mat-label>Host Name</mat-label>
+                                <input matInput placeholder="HostName" [(ngModel)]="licenseDetail.hostName" name="hostName"
+                                    required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-6">
+                            <mat-form-field appearance="outline" class="example-full-width">
+                                <mat-label>School Name</mat-label>
+                                <input matInput placeholder="School Name" [(ngModel)]="licenseDetail.entityName" name="entityName"
+                                    required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-6">
+                            <mat-form-field appearance="outline" class="example-full-width">
+                                <input matInput [matDatepicker]="activation" placeholder="Choose a date" [(ngModel)]="licenseDetail.activationDate"
+                                    name="activation">
+                                <mat-datepicker-toggle matSuffix [for]="activation"></mat-datepicker-toggle>
+                                <mat-datepicker #activation></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-6">
+                            <mat-form-field appearance="outline" class="example-full-width">
+                                <mat-label>License Validity in Days</mat-label>
+                                <input matInput placeholder="License Validity in Days" [(ngModel)]="licenseDetail.validityDay"
+                                    name="validityDay" required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-10">
+                            <mat-form-field appearance="outline" class="example-full-width">
+                                <mat-label>Product Name</mat-label>
+                                <input matInput placeholder="Product Name" [(ngModel)]="licenseDetail.productName" name="productName"
+                                    required>
+                            </mat-form-field>
+                        </div>
+                    </div>
                 </form>
             </mat-card-content>
         </mat-card>
@@ -47,47 +72,59 @@
                 <mat-card-title>Profile Details</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>Contact Number</mat-label>
-                    <input matInput placeholder="Contact Number" [(ngModel)]="licenseDetail.contactNumber" name="contactNumber"
-                        required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>Contact Email</mat-label>
-                    <input matInput placeholder="Contact Email" [(ngModel)]="licenseDetail.contactEmail" name="contactEmail"
-                        required>
-                </mat-form-field>
-                <mat-form-field class="example-full-width" appearance="outline">
-                    <textarea matInput placeholder="Address" [(ngModel)]="licenseDetail.address" name="address"></textarea>
-                </mat-form-field>
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>City</mat-label>
-                    <input matInput placeholder="City" [(ngModel)]="licenseDetail.city" name="city" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>State</mat-label>
-                    <input matInput placeholder="State" [(ngModel)]="licenseDetail.state" name="state" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>Country</mat-label>
-                    <input matInput placeholder="Country" [(ngModel)]="licenseDetail.country" name="country" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-label>Postal Code</mat-label>
-                    <input matInput placeholder="Postal Code" [(ngModel)]="licenseDetail.postalCode" name="postalCode"
-                        required>
-                </mat-form-field>
-
+                <div class="row">
+                    <div class="col-md-6">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>Contact Number</mat-label>
+                            <input matInput placeholder="Contact Number" [(ngModel)]="licenseDetail.contactNumber" name="contactNumber"
+                                required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>Contact Email</mat-label>
+                            <input matInput placeholder="Contact Email" [(ngModel)]="licenseDetail.contactEmail" name="contactEmail"
+                                required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                        <mat-form-field class="example-full-width" appearance="outline">
+                            <textarea matInput placeholder="Address" [(ngModel)]="licenseDetail.address" name="address"></textarea>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>City</mat-label>
+                            <input matInput placeholder="City" [(ngModel)]="licenseDetail.city" name="city" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-4">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>State</mat-label>
+                            <input matInput placeholder="State" [(ngModel)]="licenseDetail.state" name="state" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-4">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>Country</mat-label>
+                            <input matInput placeholder="Country" [(ngModel)]="licenseDetail.country" name="country"
+                                required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-4">
+                        <mat-form-field appearance="outline" class="example-full-width">
+                            <mat-label>Postal Code</mat-label>
+                            <input matInput placeholder="Postal Code" [(ngModel)]="licenseDetail.postalCode" name="postalCode"
+                                required>
+                        </mat-form-field>
+                    </div>
+                </div>
             </mat-card-content>
         </mat-card>
 
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-5 col-lg-6 text-right pull-right">
         <mat-card-actions>
             <button mat-raised-button (click)="registerNewLicense()" color="primary">Build New License</button>
         </mat-card-actions>
