--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -1,57 +1,13 @@
-<div class="navbar navbar-default navbar-fixed-top">
-    <div class="navbar-header">
-        <a target="_blank" class="navbar-brand">Company Name</a>
-    </div>
-</div>
-<div class="container-fluid padd-15">
-    <div class="row">
-        <div class="col-md-3">
-            <div class="book-tables wh-bg">
-                <div class="media">
-                    <div class="media-body">
-                        <h4 class="media-heading">
-                            <strong>{{user.firstname}} {{user.lastname}}</strong>
-                        </h4>
-                        <P>
-                            <strong>{{user.email}}</strong>
-                        </P>
-                        <p>
-                            <strong>{{user.mobileno}}</strong>
-                        </p>
-                        <p>ROLE :
-                            <strong>{{user.role}}</strong>
-                        </p>
-                    </div>
-                </div>
-                <button mat-raised-button (click)="viewUserList()" color="primary" *ngIf="user.role=='ADMIN'">USERS</button>
+<header class="container-fluid top-header d-flex align-items-center">
+    <div class="w-100">
+        <div class="row clearfix">
+            <div class="col-lg-12 ">
+                <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
+                <ul class="login-info">
+                    <li>Last login {{ today | date }}</li>
+                    <li><a class="user" href="#"><i class="material-icons">account_circle</i></a></li>
+                </ul>
             </div>
-
-            <mat-expansion-panel *ngFor="let class of classList">
-                <mat-expansion-panel-header>
-                    <a (click)="showClassSubjectList(class)">
-                        <mat-panel-title><i class="material-icons">folder</i> {{class.displayName}}</mat-panel-title>
-                    </a>
-                </mat-expansion-panel-header>
-                <mat-expansion-panel *ngFor="let subj of classSubjectList">
-                    <mat-expansion-panel-header>
-                        <a (click)="viewChapterList(subj)">
-                            <mat-panel-title>
-                                <i class="material-icons">developer_board</i> {{subj.displayName}}</mat-panel-title>
-                        </a>
-                    </mat-expansion-panel-header>
-                    <ul class="listItems" *ngIf="chapterList.length>0">
-                        <li *ngFor="let chapter of chapterList">
-                            <a (click)="viewTopicList(chapter)">{{chapter.displayName}}</a>
-                        </li>
-                    </ul>
-                </mat-expansion-panel>
-            </mat-expansion-panel>
-        </div>
-        <div class="col-md-9">
-               <ul class="breadcrumb">
-                        <li *ngFor="let breadcurmb of breadcurmblist"><a (click)="onclickBreadcrumb(breadcurmb)">{{breadcurmb}}</a></li>
-               </ul>
-            <router-outlet></router-outlet>
         </div>
     </div>
-</div>
+</header>
