--- a/WEB/src/app/home/teacher/teacher-register.component.html
+++ b/WEB/src/app/home/teacher/teacher-register.component.html
@@ -1,53 +1,63 @@
-<div class="container-fluid padd-15">
-    <div class="row wh-bg margin-padding">
-        <div class="search-box pull-right">
-            <input class="search-input" placeholder="Search by Teacher Name , Mobile Number">
-            <i class="material-icons">search</i>
-            <button class="cancelBtn" mat-raised-button>CANCEL</button>
+<section class="main-wrapper">
+    <div class="left-menu">
+        <div class="select-class">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Select a Class</label>
+                <select class="form-control" (change)="onClassChange($event.target.value)">
+                    <option value="">Select</option>
+                    <option [value]="classSetup" *ngFor="let class of classList">{{class.displayName}}</option>
+                </select>
+            </div>
         </div>
-        <div class="pull-right right-btn">
-            <a class="action-link" (click)="registerUser()">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">Add User</span>
-            </a>
-        </div>
-
-        <div class="col-md-6" *ngFor="let regUser of regUserList">
-            <div class="media-body">
-                <div class="order-history">
-                    <div class="history-head">
-                        <span>{{regUser.firstname}} {{regUser.lastname}} | {{regUser.role}}</span>
+        <ul class="class-list">
+            <li><a href="#" class="d-flex justify-content-start align-items-center green" *ngFor="let subject of SubjectSetupDetail"
+                    (click)="viewChapterList(subject)"><i class="fas fa-search"></i>
+                    {{subject.displayName}}</a></li>
+        </ul>
+    </div>
+    <div class="body-content">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Class</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Subject</li>
+            </ol>
+        </nav>
+        <div class="content-area">
+            <div class="primary-action mb-3">
+                <div class="row clearfix">
+                    <div class="col-md-7 col-lg-6">
+                        <h3 class="mid-tittle">Computer Science</h3>
                     </div>
-                    <div class="history-body">
-                        <div class="media-left">
-                            <img class="person-card-avatar bigPicture" src="{{regUser.profileImage?regUser.profileImage:'assets/images/teacher.png'}}">
-                            <a id="photoSelector" mat-icon-button (click)='onChangeImage(regUser)' *ngIf="loginUser.role=='ADMIN'">
-                                <mat-icon>photo_camera</mat-icon> Edit image
-                            </a>
-                        </div>
-                        <div class="media-left">
-                            <span class="detail">{{regUser.mobileno}} |{{regUser.email}} </span>
-                            <span>{{regUser.address}} {{regUser.city}} {{regUser.state}} {{regUser.country}} {{regUser.postalcode}}
-                            </span>
-                        </div>
+                    <div class="col-md-5 col-lg-6 text-right">
+                        <button type="button" class="btn btn-warning">Add Subject</button>
+                        <button type="button" class="btn btn-warning">Add Chapter</button>
+                        <button type="button" class="btn btn-warning">Add Topic</button>
                     </div>
-                    <div class="history-foot">
-                        <div class="action-btns">
-                            <div class="pull-right" *ngIf="loginUser.role=='ADMIN'">
-                                <a class="action-link" (click)="editClassDetails(class)">
-                                    <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                                    <span class="txt">EDIT</span>
-                                </a>
-                                <a class="action-link" (click)="deleteClassDetails(class)">
-                                    <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                                    <span class="txt">DELETE</span>
-                                </a>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-md-12">
+                    <div class="lesson-list">
+                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
+                            <mat-expansion-panel *ngFor="let chapter of chapterList">
+                                <mat-expansion-panel-header>
+                                    <a (click)="showTopicList(chapter)">
+                                        <mat-panel-title><i class="material-icons">folder</i> {{chapter.displayName}}</mat-panel-title>
+                                    </a>
+                                </mat-expansion-panel-header>
+                                <ul class="listItems" *ngIf="topicList.length>0">
+                                        <li *ngFor="let topic of topicList">
+                                            <a (click)="playTopic(topic)">{{topic.displayName}}</a>
+                                        </li>
+                                    </ul>
+                            </mat-expansion-panel>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
