--- a/WEB/src/app/public/register/register.component.html
+++ b/WEB/src/app/public/register/register.component.html
@@ -1,119 +1,46 @@
-<mat-toolbar>Register Product</mat-toolbar>
-
-<mat-horizontal-stepper #stepper>
-    <mat-step>
-        <ng-template matStepLabel>Product Details</ng-template>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Product Name</mat-label>
-                        <input matInput placeholder="Product Name" [(ngModel)]="productDetail.productName" name="productDetail.productName"
-                            required>
-                    </mat-form-field>
-                </div>
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Product Version</mat-label>
-                        <input matInput placeholder="Product Version" [(ngModel)]="productDetail.productVersion" name="productDetail.productVersion"
-                            required>
-                    </mat-form-field>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="example-container">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Activation Date</mat-label>
-                                <input matInput [matDatepicker]="activateDatePicker" placeholder="Activation Date"
-                                    [(ngModel)]="productDetail.activationDate">
-                                <mat-datepicker-toggle matSuffix [for]="activateDatePicker">
-                                    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                                </mat-datepicker-toggle>
-                                <mat-datepicker #activateDatePicker></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="example-container">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Expiry Date</mat-label>
-                                <input matInput [matDatepicker]="expiryDatePicker" placeholder="Expiry Date"
-                                    [(ngModel)]="productDetail.expiryDate">
-                                <mat-datepicker-toggle matSuffix [for]="expiryDatePicker">
-                                    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                                </mat-datepicker-toggle>
-                                <mat-datepicker #expiryDatePicker></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>License</mat-label>
-                        <input matInput placeholder="License" [(ngModel)]="productDetail.license" name="productDetail.license"
-                            required>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Address Details</mat-label>
-                        <input matInput placeholder="Address Details" [(ngModel)]="user.address" name="user.address"
-                            required>
-                    </mat-form-field>
-                </div>
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>City</mat-label>
-                        <input matInput placeholder="City" [(ngModel)]="user.city" name="user.city" required>
-                    </mat-form-field>
-                </div>
-
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Country</mat-label>
-                        <input matInput placeholder="Mobile Number" [(ngModel)]="user.country" name="user.country"
-                            required>
-                    </mat-form-field>
-                </div>
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>State</mat-label>
-                        <input matInput placeholder="State" [(ngModel)]="user.state" name="user.state" required>
-                    </mat-form-field>
-                </div>
-                <div class="example-container">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Postal Code</mat-label>
-                        <input matInput placeholder="State" [(ngModel)]="user.postalcode" name="user.postalcode"
-                            required>
-                    </mat-form-field>
-                </div>
+<header class="container-fluid top-header d-flex align-items-center">
+    <div class="w-100">
+        <div class="row clearfix">
+            <div class="col-lg-12 ">
+                <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
+                <ul class="login-info">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
-        <div class="example-button-row  pull-right">
-            <button mat-raised-button matStepperNext color="primary">Next</button>
+    </div>
+</header>
+<div class="body-content">
+    <div class="content-area">
+        <div class="primary-action mb-3">
+            <div class="row clearfix">
+                <h4> Register New User </h4>
+            </div>
         </div>
-    </mat-step>
-    <mat-step>
-        <form>
-            <ng-template matStepLabel>Login Details</ng-template>
+    </div>
+    <div class="row clearfix">
+        <mat-card class="example-card">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="example-container">
                         <mat-form-field appearance="outline">
                             <mat-label>User Name</mat-label>
-                            <input matInput placeholder="User Name" [(ngModel)]="login.userName" name="user.userName"
+                            <input matInput placeholder="User Name" [(ngModel)]="login.userName" name="login.userName"
                                 required>
                         </mat-form-field>
                     </div>
+                </div>
+                <div class="col-md-3">
                     <div class="example-container">
                         <mat-form-field appearance="outline">
                             <mat-label>Password</mat-label>
-                            <input matInput placeholder="Password" [(ngModel)]="login.password" name="user.password">
+                            <input matInput placeholder="Password" [(ngModel)]="login.password" name="login.password">
                         </mat-form-field>
                     </div>
+                </div>
+                <div class="col-md-3">
                     <div class="example-container">
                         <mat-select placeholder="Role" [(ngModel)]="user.role" name="user.role">
                             <mat-option *ngFor="let role of roles" [value]="role.value">
@@ -121,27 +48,26 @@
                             </mat-option>
                         </mat-select>
                     </div>
-
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="example-container col-md-6">
-                            <mat-form-field appearance="outline">
-                                <mat-label>First Name</mat-label>
-                                <input matInput placeholder="First Name" [(ngModel)]="user.firstname" name="user.firstname"
-                                    required>
-                            </mat-form-field>
-                        </div>
-
-                        <div class="example-container col-md-6">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Last Name</mat-label>
-                                <input matInput placeholder="Last Name" [(ngModel)]="user.lastname" name="user.lastname"
-                                    required>
-                            </mat-form-field>
-                        </div>
+                <div class="col-md-5">
+                    <div class="example-container">
+                        <mat-form-field appearance="outline">
+                            <mat-label>First Name</mat-label>
+                            <input matInput placeholder="First Name" [(ngModel)]="user.firstname" name="user.firstname"
+                                required>
+                        </mat-form-field>
                     </div>
-
+                </div>
+                <div class="col-md-5">
+                    <div class="example-container">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Last Name</mat-label>
+                            <input matInput placeholder="Last Name" [(ngModel)]="user.lastname" name="user.lastname"
+                                required>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="col-md-5">
                     <div class="example-container">
                         <mat-form-field appearance="outline">
                             <mat-label>Mobile Number</mat-label>
@@ -149,7 +75,8 @@
                                 required>
                         </mat-form-field>
                     </div>
-
+                </div>
+                <div class="col-md-5">
                     <div class="example-container">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
@@ -158,11 +85,11 @@
                     </div>
                 </div>
             </div>
-            <div class="example-button-row pull-right">
-                <button mat-raised-button (click)="stepper.reset()" color="warn">Reset</button>
-                <button mat-raised-button matStepperPrevious color="primary">Back</button>
-                <button mat-raised-button (click)='registerProduct()' color="primary">Activate</button>
+            <div class="col-md-5 col-lg-6 text-right pull-right">
+                <button type="button" class="btn btn-warning" mat-raised-button (click)="confirmRegisterUser()">
+                    Confirm Register</button>
             </div>
-        </form>
-    </mat-step>
-</mat-horizontal-stepper>
+        </mat-card>
+    </div>
+
+</div>
