--- a/WEB/src/app/public/register/register.component.scss
+++ b/WEB/src/app/public/register/register.component.scss
@@ -6,3 +6,12 @@
   .example-container > * {
     width: 100%;
   }
+
+  .body-content{
+    margin-left:30px;
+    margin-right:30px;
+    margin-top:20px;
+  }
+  .btn{
+    margin-left:20px;
+  }
