changes for  admin content and subject and chapter

--- a/WEB/src/app/home/admin/admin.html
+++ b/WEB/src/app/home/admin/admin.html
@@ -30,9 +30,9 @@
                         <h3 class="mid-tittle">Computer Science</h3>
                     </div>
                     <div class="col-md-5 col-lg-6 text-right">
-                        <button type="button" class="btn btn-warning">Add Subject</button>
-                        <button type="button" class="btn btn-warning">Add Chapter</button>
-                        <button type="button" class="btn btn-warning">Add Topic</button>
+                        <button type="button" class="btn btn-warning" (click)="addSubjectDetails()">Add Subject</button>
+                        <button type="button" class="btn btn-warning" (click)="addChapterDetails()">Add Chapter</button>
+                        <button type="button" class="btn btn-warning" (click)="addTopicDetails()">Add Topic</button>
                     </div>
                 </div>
             </div>
