--- a/WEB/src/app/home/admin/admin.html
+++ b/WEB/src/app/home/admin/admin.html
@@ -4,13 +4,13 @@
             <div class="form-group">
                 <label for="exampleInputEmail1">Select a Class</label>
                 <select class="form-control" (change)="onClassChange($event.target.value)">
-                    <option value="">Select</option>
-                    <option [value]="classSetup" *ngFor="let class of classList">{{class.displayName}}</option>
+                    <option value="">Select Class</option>
+                    <option *ngFor="let class of classList">{{class.displayName}}</option>
                 </select>
             </div>
         </div>
         <ul class="class-list">
-            <li><a href="#" class="d-flex justify-content-start align-items-center green" *ngFor="let subject of SubjectSetupDetail"
+            <li><a href="#" class="d-flex justify-content-start align-items-center green" *ngFor="let subject of classSubjectList"
                     (click)="viewChapterList(subject)"><i class="fas fa-search"></i>
                     {{subject.displayName}}</a></li>
         </ul>
@@ -27,9 +27,10 @@
             <div class="primary-action mb-3">
                 <div class="row clearfix">
                     <div class="col-md-7 col-lg-6">
-                        <h3 class="mid-tittle">Computer Science</h3>
+                        <h3 class="mid-tittle"></h3>
                     </div>
                     <div class="col-md-5 col-lg-6 text-right">
+                        <button type="button" class="btn btn-warning" (click)="addClassDetails()">Add Class</button>
                         <button type="button" class="btn btn-warning" (click)="addSubjectDetails()">Add Subject</button>
                         <button type="button" class="btn btn-warning" (click)="addChapterDetails()">Add Chapter</button>
                         <button type="button" class="btn btn-warning" (click)="addTopicDetails()">Add Topic</button>
@@ -47,13 +48,16 @@
                                         <mat-panel-title><i class="material-icons">folder</i> {{chapter.displayName}}</mat-panel-title>
                                     </a>
                                 </mat-expansion-panel-header>
-                                <ul class="listItems" *ngIf="topicList.length>0">
-                                        <li *ngFor="let topic of topicList">
-                                            <a (click)="playTopic(topic)">{{topic.displayName}}</a>
-                                        </li>
-                                    </ul>
+                                    <div *ngFor="let topic of topicList">
+                                        <div class="card col-md-3 col-sm-3">
+                                            <img src="assets/images/class.jpg" alt="Avatar">
+                                            <div class="container">
+                                                <h4><b>{{topic.displayName}}</b></h4>
+                                                <p>{{topic.description}}</p>
+                                            </div>
+                                        </div>
+                                    </div>
                             </mat-expansion-panel>
-
                         </div>
                     </div>
                 </div>
