--- a/WEB/src/app/home/admin/admin.html
+++ b/WEB/src/app/home/admin/admin.html
@@ -10,8 +10,8 @@
             </div>
         </div>
         <ul class="class-list">
-            <li><a href="#" class="d-flex justify-content-start align-items-center green" *ngFor="let subject of classSubjectList"
-                    (click)="viewChapterList(subject)"><i class="fas fa-search"></i>
+            <li><a  class="d-flex justify-content-start align-items-center green" *ngFor="let subject of classSubjectList"
+                    (click)="viewChapterListForSubject(subject)"> <i class="material-icons">search</i>
                     {{subject.displayName}}</a></li>
         </ul>
     </div>
@@ -19,8 +19,9 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Class</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Subject</li>
+                <li class="breadcrumb-item"><a  (click)="viewSubjectList()">Class</a></li>
+                <li class="breadcrumb-item"><a (click)="viewChapterList()">Subject</a></li>
+                <li class="breadcrumb-item active" aria-current="page"><a (click)="viewTopicList()">Chapter</a></li>
             </ol>
         </nav>
         <div class="content-area">
@@ -48,15 +49,26 @@
                                         <mat-panel-title><i class="material-icons">folder</i> {{chapter.displayName}}</mat-panel-title>
                                     </a>
                                 </mat-expansion-panel-header>
-                                    <div *ngFor="let topic of topicList">
-                                        <div class="card col-md-3 col-sm-3">
-                                            <img src="assets/images/class.jpg" alt="Avatar">
-                                            <div class="container">
-                                                <h4><b>{{topic.displayName}}</b></h4>
-                                                <p>{{topic.description}}</p>
+                                <div class="col-md-3" *ngFor="let topic of topicList">
+                                    <div class="card result-list">
+                                        <div class="card-header">
+                                            {{topic.displayName}}
+                                            <div class="action">
+                                                <a (click)="editTopicDetail(topic)">
+                                                    <i class="material-icons">edit</i>
+                                                </a>
                                             </div>
                                         </div>
+                                        <div class="card-body">
+                                            <a (click)="playLessonForTopic(topic)">
+                                                <img src="{{topic.icon}}" alt="Avatar">
+                                                <div class="container">
+                                                    <p>{{topic.description}}</p>
+                                                </div>
+                                            </a>
+                                        </div>
                                     </div>
+                                </div>
                             </mat-expansion-panel>
                         </div>
                     </div>
