--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -4,8 +4,9 @@
             <div class="col-lg-12 ">
                 <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
                 <ul class="login-info">
-                    <li>Last login {{ today | date }}</li>
-                    <li><a class="user" href="#"><i class="material-icons">account_circle</i></a></li>
+                    <li><a class="user" (click)="viewSessionReport()" *ngIf="user.role=='ADMIN'">View Session Reports</a></li>
+                    <li>Last login : {{ today | date:'MM/dd/yy h:mm:ss a' }}</li>
+                    <li><a class="user" (click)="gotToHomepage()"><i class="material-icons">account_circle</i></a></li>
                 </ul>
             </div>
         </div>
