--- a/WEB/src/app/home/admin/admin.html
+++ b/WEB/src/app/home/admin/admin.html
@@ -2,7 +2,6 @@
     <div class="left-menu">
         <div class="select-class">
             <div class="form-group">
-                <label for="exampleInputEmail1">Select a Class</label>
                 <select class="form-control" (change)="onClassChange($event.target.value)">
                     <option value="">Select Class</option>
                     <option *ngFor="let class of classList">{{class.displayName}}</option>
@@ -10,7 +9,7 @@
             </div>
         </div>
         <ul class="class-list">
-            <li><a  class="d-flex justify-content-start align-items-center green" *ngFor="let subject of classSubjectList"
+            <li><a class="d-flex justify-content-start align-items-center green" *ngFor="let subject of classSubjectList"
                     (click)="viewChapterListForSubject(subject)"> <i class="material-icons">search</i>
                     {{subject.displayName}}</a></li>
         </ul>
@@ -19,7 +18,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a  (click)="viewSubjectList()">Class</a></li>
+                <li class="breadcrumb-item"><a (click)="viewSubjectList()">Class</a></li>
                 <li class="breadcrumb-item"><a (click)="viewChapterList()">Subject</a></li>
                 <li class="breadcrumb-item active" aria-current="page"><a (click)="viewTopicList()">Chapter</a></li>
             </ol>
@@ -40,38 +39,35 @@
             </div>
             <div class="row clearfix">
                 <div class="col-md-12">
-                    <div class="lesson-list">
-                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
-                            <mat-expansion-panel *ngFor="let chapter of chapterList">
-                                <mat-expansion-panel-header>
-                                    <a (click)="showTopicList(chapter)">
-                                        <mat-panel-title><i class="material-icons">folder</i> {{chapter.displayName}}</mat-panel-title>
-                                    </a>
-                                </mat-expansion-panel-header>
-                                <div class="col-md-3" *ngFor="let topic of topicList">
-                                    <div class="card result-list">
-                                        <div class="card-header">
-                                            {{topic.displayName}}
-                                            <div class="action">
-                                                <a (click)="editTopicDetail(topic)">
-                                                    <i class="material-icons">edit</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="card-body">
-                                            <a (click)="playLessonForTopic(topic)">
-                                                <img src="{{topic.icon}}" alt="Avatar">
-                                                <div class="container">
-                                                    <p>{{topic.description}}</p>
-                                                </div>
+                    <mat-expansion-panel *ngFor="let chapter of chapterList">
+                        <mat-expansion-panel-header>
+                            <a (click)="showTopicList(chapter)">
+                                <mat-panel-title><i class="material-icons">folder</i> {{chapter.displayName}}</mat-panel-title>
+                            </a>
+                        </mat-expansion-panel-header>
+                        <div class="row">
+                            <div class="col-md-3" *ngFor="let topic of topicList">
+                                <div class="card result-list">
+                                    <div class="card-header">
+                                        {{topic.displayName}}
+                                        <div class="action">
+                                            <a (click)="editTopicDetail(topic)">
+                                                <i class="material-icons">edit</i>
                                             </a>
                                         </div>
                                     </div>
+                                    <div class="card-body">
+                                        <a (click)="playLessonForTopic(topic)">
+                                            <img src="{{topic.icon}}" alt="Avatar">
+                                            <div class="container">
+                                                <p>{{topic.description}}</p>
+                                            </div>
+                                        </a>
+                                    </div>
                                 </div>
-                            </mat-expansion-panel>
+                            </div>
                         </div>
-                    </div>
+                    </mat-expansion-panel>
                 </div>
             </div>
         </div>
