--- a/WEB/src/app/home/admin/admin.scss
+++ b/WEB/src/app/home/admin/admin.scss
@@ -175,4 +175,10 @@ box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.56); background:#fff; padding:20px;}
   .container {
 	padding: 2px 16px;
   }
- 
+  .example-full-width {
+	width: 100%;
+  }
+  .example-button-row button,
+  .example-button-row a {
+	margin-right: 8px;
+  }
