--- a/WEB/src/app/home/content-mgmnt/topics/topic.html
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.html
@@ -6,23 +6,23 @@
           <form>
             <div class="form-group mb-4">
               <label for="exampleInputEmail1">Select Class</label>
-              <select class="form-control" (change)="onClassChange($event.target.value)">
-                <option value="">Select</option>
-                <option  *ngFor="let class of classList">{{class.displayName}}</option>
+              <select class="form-control" (change)="onClassChange($event.target.value)" [value]="className">
+                <option value="">Select Class</option>
+                <option *ngFor="let class of classList">{{class.displayName}}</option>
               </select>
             </div>
             <div class="form-group mb-4">
               <label for="exampleInputEmail1">Select Subject</label>
-              <select class="form-control" (change)="onSubjectChange($event.target.value)">
+              <select class="form-control" (change)="onSubjectChange($event.target.value)" [value]="subjectName">
                 <option value="">Select</option>
-                <option  *ngFor="let subejct of classSubjectList">{{subejct.displayName}}</option>
+                <option *ngFor="let subejct of classSubjectList">{{subejct.displayName}}</option>
               </select>
             </div>
             <div class="form-group mb-4">
               <label for="exampleInputEmail1">Select Chapter</label>
-              <select class="form-control" (change)="onChapterChange($event.target.value)">
-                <option value="">Select</option>
-                <option  *ngFor="let chapter of chapterList">{{chapter.displayName}}</option>
+              <select class="form-control" (change)="onChapterChange($event.target.value)" [value]="chapterName">
+                <option value="">Select Chapter</option>
+                <option *ngFor="let chapter of chapterList">{{chapter.displayName}}</option>
               </select>
             </div>
             <button type="submit" class="btn btn-search" (click)="searchTopicDetails()">
@@ -31,12 +31,13 @@
           </form>
         </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 body-content">
         <div class="row">
           <div class="col-md-9">
             <form class="example-form">
               <mat-form-field class="example-full-width">
-                <input matInput placeholder="Search Topics, Chapter, Subject or Class"  [matAutocomplete]="auto" [formControl]="stateCtrl">
+                <input matInput placeholder="Search Topics, Chapter, Subject or Class" [matAutocomplete]="auto"
+                  [formControl]="stateCtrl">
                 <mat-autocomplete #auto="matAutocomplete">
                   <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
                     <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
